<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cell Shock</string>
    <string name="hello_world">Hello world!</string>
     <string name="score">Score:</string>
    <string name="action_settings">Settings</string>
     <string name="toggle_music">Music</string>
     <string name="toggle_sound">Sound</string>
     <string name="Main_Menu">Main Menu</string>
	<string name="level_One">Level One: </string>
	<string name="level_Two">Level Two: </string>
	<string name="level_Three">Level Three: </string>
	<string name="level_Four">Level Four: </string>
	<string name="level_Five">Level Five: </string>
</resources>
