<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menu"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.cellshock.CompleteSplash" >

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/linearLayout1"
            android:layout_toLeftOf="@+id/linearLayout1"
            android:orientation="vertical"
            android:padding="4dp" >

            <TextView
                android:id="@+id/levelNameOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                android:text="@string/level_One" />

            <TextView
                android:id="@+id/levelNameTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                android:text="@string/level_Two" />

            <TextView
                android:id="@+id/levelNameThree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                android:text="@string/level_Three" />

            <TextView
                android:id="@+id/levelNameFour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                android:text="@string/level_Four" />

            <TextView
                android:id="@+id/levelNameFive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                android:text="@string/level_Five" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="89dp"
            android:layout_marginTop="66dp"
            android:orientation="vertical"
            android:padding="4dp" >

            <TextView
                android:id="@+id/scoreOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/score" />

            <TextView
                android:id="@+id/scoreTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/score" />

            <TextView
                android:id="@+id/scoreThree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/score" />

            <TextView
                android:id="@+id/scoreFour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/score" />

            <TextView
                android:id="@+id/scoreFive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/score" />
        </LinearLayout>

          <Button
              android:id="@+id/clearHighScore"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_below="@+id/linearLayout2"
              android:layout_centerHorizontal="true"
              android:layout_margin="4dp"
              android:layout_marginTop="68dp"
              android:background="@drawable/buttoncolours"
              android:onClick="clearScore"
              android:padding="10dp"
              android:text="Clear Scores" />

          <Button
              android:id="@+id/Back"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_below="@+id/clearHighScore"
              android:layout_centerHorizontal="true"
              android:layout_margin="2dp"
              android:background="@drawable/returncolour"
              android:onClick="Back"
              android:padding="6dp"
              android:text="Return" />

</RelativeLayout>